--- a/index.html
+++ b/index.html
@@ -1,21 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style/architects.css">
-</head>
-<body>
 
-    <header>
-        
+
+</head>
+
+<body class=".work-sans-font">
+
+    <header class="gb-light">
+        <nav class="navber display-flex">
+            <h3 class="breand">G3 Architects</h3>
+            <ul class="nav-links display-flex">
+                <li class="nav-item"><a href="" class="nav-link text-dark02">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-dark02">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-dark02">Contact Us</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-dark02">Login</a></li>
+            </ul>
+
+
+        </nav>
+        <div class="banner">
+          <div class="banner-content">
+              <h1 class="banner-title">Brand New
+                Group of Architects
+            </h1>
+            <p class="banner-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+            </p>
+            <button class="btn-primary">Explore More</button>
+          </div>
+            <img class="banner-img" src="images/banner.png" alt="">
+
+        </div>
+
     </header>
 
 
     <main></main>
 
     <footer></footer>
-    
+
 </body>
+
 </html>
