--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body class=".work-sans-font">
+<body class="work-sans-font">
 
     <header class="gb-light">
         <nav class="navber display-flex">
@@ -40,7 +40,53 @@
     </header>
 
 
-    <main></main>
+    <main>
+        <!-- teams section -->
+        <section class="teams display-flex">
+            <div class="teams-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+
+            </div>
+            <div class="teams-Features">
+                <h3 class="section-title"><span id="Quick list"class="text-dark03">Quick list</span><span> of Our </span><span class="text-primary"> Features</span></h3>
+
+                <p class="Features-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+
+            </div>
+        </section>
+        <!-- Some Facts  -->
+         <section>
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-dark03">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="facts-container">
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+            </div>
+         </section>
+
+    </main>
 
     <footer></footer>
 
