--- a/index.html
+++ b/index.html
@@ -62,6 +62,38 @@
 
             </div>
         </section>
+        <!-- Features you will love & enjoy -->
+         <section class="features display-flex"> 
+            <div>
+                <h3 id="features-title" class="section-title">Features you will <br> love & enjoy</h3>
+                <p class="text-dark03">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="features-card">
+                    <h4 class="card-title">Dexktop & Mobile Version</h4>
+                    <p class="text-dark03">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="features-card">
+                    <h4 class="card-title">Drag & Drop Builder</h4>
+                    <p class="text-dark03">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="features-card">
+                    <h4 class="card-title">Awesome Modern Design</h4>
+                    <p class="text-dark03">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="features-card">
+                    <h4 class="card-title">Super Easy to Edit</h4>
+                    <p class="text-dark03">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div>
+                <img src="images/architect.png" alt="">
+                <button id="experience-btn" class="btn-primary">
+                    <span class="Experience-years">10+Year</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
+
+         </section>
         <!-- Some Facts  -->
         <section>
             <h3 class="section-title">Some Facts</h3>
