completed the project and responsive max-width 992 px

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <p class="text-dark03">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                 </div>
             </div>
-            <div>
+            <div class="Experience-img">
                 <img src="images/architect.png" alt="">
                 <button id="experience-btn" class="btn-primary">
                     <span class="Experience-years">10+Year</span>
@@ -150,7 +150,11 @@
 
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class="copyright-section gb-light">
+            <p class="text-dark03">All rights reserved copyright@2023 startup landing page design</p>
+        </div>
+    </footer>
 
 </body>
 
